--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ url: http://snowcloak.github.io/
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "https://github.com/snowcloak/Digital-Humanities.git"
+baseurl: "http://snowcloak.github.io/Digital-Humanities"
 
 #
 # !! You don't need to change any of the configuration flags below !!
