--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: 
   instagram:
   linkedin:
   pinterest:
@@ -47,7 +47,7 @@ url: http://snowcloak.github.io/
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "http://snowcloak.github.io/Digital-Humanities"
+baseurl: ""
 
 #
 # !! You don't need to change any of the configuration flags below !!
