--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Digital Humanities
 description: DH Project
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: panda.jpg
+avatar: snowcloak.github.io/images/Panda.jpeg
 
 #
 # Flags below are optional
